--- a/templates/xhtml-templates/10.3.9-my-account-update-details.html
+++ b/templates/xhtml-templates/10.3.9-my-account-update-details.html
@@ -444,7 +444,7 @@
 					</form>
 					<form id="update-password" class="update-password" action="#">
 						<p class="bottom-border row-title grey">Please enter current and new password:</p>
-						<p class="grey pass-info">Please enter a secure password consisting of a minimum of 6 characters</p>
+						<p class="grey pass-info">Password must consist of a minimum of 6 characters<br />&nbsp;</p>
 						<p class="error"> Please enter a secure password consisting of a minimum of 6 characters</p>
 						<label for="update-new-password">New Password*</label>
 						<input name="update-new-password" type="password" id="update-new-password" maxlength="64" />
