--- a/templates/xhtml-templates/10.4.1-content.html
+++ b/templates/xhtml-templates/10.4.1-content.html
@@ -479,7 +479,7 @@
 						
 					<p>&nbsp;</p>
 					<div id="content-iframe-2">
-						<iframe src="http://www.w3.org/TR/2011/WD-html5-20110525/the-iframe-element.html#the-iframe-element" width="245" scrolling="no"></iframe>
+						<iframe src="http://ir2.flife.de/data/science_sport/ticker_e.php" width="245" height="195" scrolling="no" frameborder="0" ></iframe>
 					</div>
 						
 					</div>
@@ -524,7 +524,7 @@
 					
 					<!-- iframe content -->
 					<div id="content-iframe">
-						<iframe src="http://www.w3.org/TR/2011/WD-html5-20110525/the-iframe-element.html#the-iframe-element" width="934" scrolling="no"></iframe>
+						<iframe src="http://otp.investis.com/clients/uk/science_sport/rns/regulatory-news.aspx?culture=en-GB" width="934" height="862" scrolling="no" frameborder="0"></iframe>
 					</div>
 				</div>
 			</div>
