--- a/templates/email-templates/11.3-customer-wishlist-v3.html
+++ b/templates/email-templates/11.3-customer-wishlist-v3.html
@@ -151,61 +151,16 @@
             </td>
           </tr>
 
-          <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+          <!-- row start  -->
+		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
           "#F6F6F6">
             <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
               <table border="0" style="font-size:12px;width:600px;" cellpadding="10"
               cellspacing="0" width="600" align="left">
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
-                  <td width="260" style=
-                  "font-family:Arial, Helvetica, sans-serif;width:260px;">
-                    <table border="0" style="font-size:12px;" cellpadding="0"
-                    cellspacing="0" align="left">
-                      <tr>
-                        <td rowspan="2" style=
-                        "font-family:Arial, Helvetica, sans-serif;"><img src=
-                        "./email-img/product.png" style=
-                        "text-align:center;padding:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
-                         border="0" alt="product-image" width="107" height=
-                        "111" /></td>
-
-                        <td valign="middle" height="100" style=
-                        "font-family:Arial, Helvetica, sans-serif;height:100px;">
-                          <table border="0" style="font-size:12px;" cellpadding="0"
-                          cellspacing="0" align="left">
-                            <tr>
-                              <td style="font-family:Arial, Helvetica, sans-serif;">
-                              <span style="text-align:left;font-weight:bold;">Product Name:</span> Name</td>
-                            </tr>
-
-                            <tr>
-                              <td style="font-family:Arial, Helvetica, sans-serif;">
-                              <span style="text-align:left;font-weight:bold;">Product Code:</span> Code</td>
-                            </tr>
-
-                            <tr>
-                              <td style="font-family:Arial, Helvetica, sans-serif;">
-                              <span style="text-align:left;font-weight:bold;"
-                             >Price:</span> &#163;9.99</td>
-                            </tr>
-
-                            <tr>
-                              <td style="font-family:Arial, Helvetica, sans-serif;">
-                              <span style="text-align:left;font-weight:bold;">Was:</span> <span style=
-                              "text-decoration:line-through;">&#163;19.99</span></td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-
-                      <tr>
-                        <td valign="bottom" align="right" style=
-                        "font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
-                        "color:#000000;">View Details</a></td>
-                      </tr>
-                    </table>
-                  </td>
-
+				
+                  <!-- product cell -->
                   <td width="260" style=
                   "font-family:Arial, Helvetica, sans-serif;width:260px;">
                     <table border="0" style="font-size:12px;" cellpadding="0"
@@ -253,10 +208,205 @@
                       </tr>
                     </table>
                   </td>
+				  <!-- product cell -->
+				  
+				  <!-- product cell new -->
+				  <td width="260">
+				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
+						<tr>
+							<td>
+								<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0">
+									<tr>
+										<td style="text-align:center"><img src="./email-img/product.png" style="border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+                         border="0" alt="product-image" width="107" height="111" /></td>	
+									</tr>
+								</table>
+							</td>
+
+							<td valign="top" >
+								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
+									<tr>
+									  <td style="font-family:Arial, Helvetica, sans-serif;">
+									  <span style="text-align:left;font-weight:bold;">Product Name:</span> Name</td>
+									</tr>
+		
+									<tr>
+									  <td style="font-family:Arial, Helvetica, sans-serif;">
+									  <span style="text-align:left;font-weight:bold;">Product Code:</span> Code</td>
+									</tr>
+		
+									<tr>
+									  <td style="font-family:Arial, Helvetica, sans-serif;">
+									  <span style="text-align:left;font-weight:bold;">Price:</span> &#163;9.99</td>
+									</tr>
+		
+									<tr>
+									  <td style="font-family:Arial, Helvetica, sans-serif;">
+									  <span style="text-align:left;font-weight:bold;">Was:</span> <span style=
+									  "text-decoration:line-through;">&#163;19.99</span></td>
+									</tr>
+									
+									<tr>
+										<td>&nbsp;<br />&nbsp;</td>
+									</tr>
+									
+									<tr>
+										<td valign="bottom" align="right" style=
+										"font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
+										"color:#000010;">View Details</a></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table>
+				  </td>
+                 
+				  <!-- product cell new -->
+				  
+
+				  
                 </tr>
               </table>
             </td>
           </tr>
+		  
+		  <!-- row end -->
+		  
+		  <!-- row start -->
+		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+          "#F6F6F6">
+            <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
+              <table border="0" style="font-size:12px;width:600px;" cellpadding="10"
+              cellspacing="0" width="600" align="left">
+                <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
+				
+                  <!-- product cell -->
+                  <td width="260" style=
+                  "font-family:Arial, Helvetica, sans-serif;width:260px;">
+                    <table border="0" style="font-size:12px;" cellpadding="0"
+                    cellspacing="0" align="left">
+                      <tr>
+                        <td rowspan="2" style=
+                        "font-family:Arial, Helvetica, sans-serif;"><img src=
+                        "./email-img/product.png" style=
+                        "text-align:center;padding:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+                         border="0" alt="product-image" width="107" height=
+                        "111" /></td>
+
+                        <td valign="middle" height="100" style=
+                        "font-family:Arial, Helvetica, sans-serif;height:100px;">
+                          <table border="0" style="font-size:12px;" cellpadding="0"
+                          cellspacing="0" align="left">
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Product Name:</span> Name</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Product Code:</span> Code</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Price:</span> &#163;9.99</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Was:</span> <span style=
+                              "text-decoration:line-through;">&#163;19.99</span></td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td valign="bottom" align="right" style=
+                        "font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
+                        "color:#000000;">View Details</a></td>
+                      </tr>
+                    </table>
+                  </td>
+				  <!-- product cell -->
+				  
+
+				  
+                </tr>
+              </table>
+            </td>
+          </tr>
+		  
+		  <!-- row end -->
+		  
+		  <!-- row start -->
+		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+          "#F6F6F6">
+            <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
+              <table border="0" style="font-size:12px;width:600px;" cellpadding="10"
+              cellspacing="0" width="600" align="left">
+                <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
+				
+                  <!-- product cell -->
+                  <td width="260" style=
+                  "font-family:Arial, Helvetica, sans-serif;width:260px;">
+                    <table border="0" style="font-size:12px;" cellpadding="0"
+                    cellspacing="0" align="left">
+                      <tr>
+                        <td rowspan="2" style=
+                        "font-family:Arial, Helvetica, sans-serif;"><img src=
+                        "./email-img/product.png" style=
+                        "text-align:center;padding:10px;border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+                         border="0" alt="product-image" width="107" height=
+                        "111" /></td>
+
+                        <td valign="middle" height="100" style=
+                        "font-family:Arial, Helvetica, sans-serif;height:100px;">
+                          <table border="0" style="font-size:12px;" cellpadding="0"
+                          cellspacing="0" align="left">
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Product Name:</span> Name</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Product Code:</span> Code</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Price:</span> &#163;9.99</td>
+                            </tr>
+
+                            <tr>
+                              <td style="font-family:Arial, Helvetica, sans-serif;">
+                              <span style="text-align:left;font-weight:bold;">Was:</span> <span style=
+                              "text-decoration:line-through;">&#163;19.99</span></td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+
+                      <tr>
+                        <td valign="bottom" align="right" style=
+                        "font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
+                        "color:#000000;">View Details</a></td>
+                      </tr>
+                    </table>
+                  </td>
+				  <!-- product cell -->
+				  
+
+				  
+                </tr>
+              </table>
+            </td>
+          </tr>
+		  
+		  <!-- row end -->
 
           <tr style="background-color:#f6f6f6;"
           bgcolor="#F6F6F6">
