--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -350,7 +350,8 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #related-articles h2{margin-bottom:0}
 #related-articles a{color:#9e9e9e;font-size:14px}
 #related-articles ul{list-style-type:none;margin:5px 0 0 -40px}
-#form-builder label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:220px;font-size:12px}
+#form-builder label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:100%;font-size:12px}
+#form-builder h4{width:100%;float:left;}
 #form-builder-narrow label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:100px;font-size:12px}
 #form-builder p, #form-builder-narrow p{font-size:12px;float:left;clear:both}
 #form-builder input, #form-builder-narrow input{height:31px;line-height:31px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;display:block}
@@ -796,9 +797,21 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 .louder{text-transform:uppercase}
 .pass-info{padding-top:0; padding-bottom:6px}
 
-@-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
+.radio-row p{
+	white-space: pre;
+	display:block;
+	margin-top: -20px;
+}
+.radio-row input{
+	float:none!important;
+	display:inline-block!important;
+	margin-bottom: -12px!important;
+}
+
+@-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}.radio-row input[type="radio"]{margin-bottom: 15px !important; height: 0 !important;}}
 html[data-useragent*='MSIE 10.0'] * select{background:#ddd none no-repeat -100px 0 !important}
 html[data-useragent*='MSIE 10.0'] * input[type="checkbox"]{background-color:transparent !important;border:0 !important}
 /*html[data-useragent*='MSIE 10.0'] * input[type="radio"]{background-position: 55px 0px!important}*/
 html[data-useragent*='MSIE 10.0'] * input[type="radio"], #my-account-register-form input[type="radio"], #update-details input[type="radio"] {background: none!important};
 /*js this...*/
+
