--- a/templates/email-templates/11.7-abandoned-cart-v2.html
+++ b/templates/email-templates/11.7-abandoned-cart-v2.html
@@ -4,7 +4,8 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-
+  <meta name="generator" content=
+  "HTML Tidy for Linux/x86 (vers 25 March 2009), see www.w3.org" />
   <style type="text/css">
 /*<![CDATA[*/
   .ReadMsgBody {
@@ -13,7 +14,8 @@
   .ExternalClass {
         width: 100%;
   }
-
+  body {
+  }
   span.yshortcuts {
         color: #000;
         background-color: none;
@@ -35,6 +37,7 @@
   .ReadMsgBody {width: 100%;}
   .ExternalClass {width: 100%;}
 
+  body {}
 
   span.yshortcuts { color:#000; background-color:none; border:none;}
   span.yshortcuts:hover,
@@ -45,16 +48,16 @@
 </head>
 
 <body style=
-"font-size:12px;width:100%;padding:0;margin:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
+"padding:0;margin:0;font-size:12px;width:100%;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;">
 <table border="0" cellpadding="0" cellspacing="0" style=
-"border-spacing:0;background-color:#d7dede;padding:0;margin:0;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;border-collapse:collapse;width:100%;"
+"padding:0;margin:0;border-spacing:0;background-color:#d7dede;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;border-collapse:collapse;width:100%;"
   bgcolor="#D7DEDE">
     <tr align="center">
       <td style="font-family:Arial, Helvetica, sans-serif;">
         <table border="0" style=
         "font-size:12px;border-spacing:0;font-family:arial, verdana, sans-serif;width:600px;"
         cellpadding="0" cellspacing="0">
-          <tr style="width:600px;background-color:#171717;" bgcolor="#171717" align=
+                   <tr style="width:600px;background-color:#171717;" bgcolor="#171717" align=
           "left">
             	<td>
 				<table border="0" cellpadding="0" cellspacing="0">
@@ -78,9 +81,8 @@
 			</td>
           </tr>
 
-          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6" >
-            <td style="font-family:Arial, Helvetica, sans-serif;" height=
-          "20">&nbsp;</td>
+          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+            <td style="font-family:Arial, Helvetica, sans-serif;" height="20">&nbsp;</td>
           </tr>
 
           <tr align="left">
@@ -88,27 +90,27 @@
               <table border="0" style="border-spacing:0;text-align:center;width:600px;"
               cellpadding="0" cellspacing="0" align="left">
                 <tr style="border-collapse:collapse;height:15px;" align="left">
-                  <td bgcolor="#F6F6F6"   style=
+                  <td bgcolor="#F6F6F6"  style=
                   "font-family:Arial, Helvetica, sans-serif;height:15px;width:600px;border-collapse:collapse;"
                   width="600" height="15" colspan="2"><img src=
-                  "./email-img/email-gradient-t.png"
-                  style="display:block;" width="600" height="15" alt="" /></td>
+                  "./email-img/email-gradient-t.png" style="display:block;" width="600"
+                  height="15" alt="" /></td>
                 </tr>
 
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6" valign="middle"
                 align="left">
-                  <td  style=
+                  <td style=
                   "font-family:Arial, Helvetica, sans-serif;font-weight:bold;font-size:18px;padding-left:20px;color:black;width:600px;border-collapse:collapse;"
                   width="600" colspan="2" bgcolor="#FFFFFF" height="50" valign="middle"
                   align="left">Email Heading message</td>
                 </tr>
 
                 <tr align="left">
-                  <td  style=
+                  <td style=
                   "font-family:Arial, Helvetica, sans-serif;width:600px;border-collapse:collapse;"
                   bgcolor="#F6F6F6" width="600" height="15" colspan="2"><img src=
-                  "./email-img/email-gradient-b.png"
-                  width="600" height="15" alt="" /></td>
+                  "./email-img//email-gradient-b.png" width="600" height="15" alt=
+                  "" /></td>
                 </tr>
               </table>
             </td>
@@ -119,28 +121,21 @@
               <table border="0" style="font-size:12px;width:600px;" cellpadding="20"
               cellspacing="0" width="600" align="left">
                 <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
-                  <td  style=
+                  <td style=
                   "font-family:Arial, Helvetica, sans-serif;border-collapse:collapse;"
                   width="600" colspan="2" valign="middle" align="left">[[[Customer First
                   Name]]] [[[Customer Last Name]]]</td>
                 </tr>
 
-                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6"
-                >
-                  <td  style=
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+                  <td style=
                   "font-family:Arial, Helvetica, sans-serif;border-collapse:collapse;"
                   colspan="2" align="left">[[[Customer Email Address]]]</td>
                 </tr>
 
-                <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
-                  <td  style=
-                  "font-family:Arial, Helvetica, sans-serif;border-collapse:collapse;width:600px;"
-                  colspan="2" align="left">[[[Friend Name]]]</td>
-                </tr>
-
-                <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
-                  <td  width="600" style=
-                  "font-family:Arial, Helvetica, sans-serif;text-align:left;border-collapse:collapse;width:600px;"
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+                  <td style=
+                  "font-family:Arial, Helvetica, sans-serif;text-align:left;border-collapse:collapse;"
                   colspan="2" align="left">Lorem ipsum dolor sit amet, consectetur
                   adipiscing elit. Sed gravida rutrum mi, a viverra leo pulvinar vel.
                   Quisque molestie lorem in ipsum congue nec interdum sem adipiscing.
@@ -151,13 +146,25 @@
                   imperdiet ultrices sem, vel mollis lorem gravida sed. Donec nibh
                   enim,</td>
                 </tr>
+
+                <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+                  <td style=
+                  "font-family:Arial, Helvetica, sans-serif;text-align:left;border-collapse:collapse;"
+                  colspan="2" align="left">fermentum dapibus ultrices sit amet, feugiat
+                  non nulla. Suspendisse egestas mollis augue ut cursus. Nulla gravida
+                  nisi sed neque aliquet blandit at id urna. Proin luctus viverra neque
+                  auctor adipiscing. Nam euismod rutrum consectetur. Praesent ullamcorper
+                  aliquam metus eu ultricies. Curabitur sagittis erat non arcu dignissim
+                  pretium.</td>
+                </tr>
               </table>
             </td>
           </tr>
 
-          <!-- row start  -->
+                    <!-- row start eg.(if i%2 == 0) -->
 		  
-		   	<tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+		  		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
           "#F6F6F6">
             <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
               <table border="0" style="font-size:12px;width:600px;" cellpadding="5"
@@ -165,7 +172,7 @@
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
 				
 				<!-- product cell new -->
-				  <td>
+				  <td width="300">
 				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
 						<tr>
 							<td>
@@ -180,22 +187,75 @@
 							<td valign="middle">
 								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Name: </span>Name</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Code: </span>Code</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Price: </span>&#163;9.99</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Was: </span><span style=
+									  "text-decoration:line-through;">&#163;19.99</span></td>
+									</tr>
+									
+									<tr>
+										<td>&nbsp;<br />&nbsp;</td>
+									</tr>
+									
+									<tr>
+										<td valign="bottom" align="right" style=
+										"font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
+										"color:#000010;">View Details</a></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table>
+				  </td>
+                 
+				  <!-- product cell new -->
+				  
+				 <!-- product cell new -->
+				  <td width="300">
+				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
+						<tr>
+							<td>
+								<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0">
+									<tr>
+										<td style="text-align:center"><img src="./email-img/product.png" style="border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+                         border="0" alt="product-image" width="107" height="111" /></td>	
+									</tr>
+								</table>
+							</td>
+
+							<td valign="middle">
+								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Product Name: </span>Name</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Product Code: </span>Code</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Price: </span>&#163;9.99</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Was: </span><span style=
 									  "text-decoration:line-through;">&#163;19.99</span></td>
 									</tr>
@@ -218,15 +278,17 @@
 				  <!-- product cell new -->
 				  
 
+				  
                 </tr>
               </table>
             </td>
           </tr>
 		  <!-- row end -->
 		  
-          <!-- row start  -->
+		  <!-- row start eg.(if i%2 == 0) -->
 		  
-		   	<tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+		  		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
           "#F6F6F6">
             <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
               <table border="0" style="font-size:12px;width:600px;" cellpadding="5"
@@ -234,7 +296,7 @@
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
 				
 				<!-- product cell new -->
-				  <td>
+				  <td width="300">
 				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
 						<tr>
 							<td>
@@ -249,22 +311,75 @@
 							<td valign="middle">
 								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Name: </span>Name</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Code: </span>Code</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Price: </span>&#163;9.99</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Was: </span><span style=
+									  "text-decoration:line-through;">&#163;19.99</span></td>
+									</tr>
+									
+									<tr>
+										<td>&nbsp;<br />&nbsp;</td>
+									</tr>
+									
+									<tr>
+										<td valign="bottom" align="right" style=
+										"font-family:Arial, Helvetica, sans-serif;"><a href="#" style=
+										"color:#000010;">View Details</a></td>
+									</tr>
+								</table>
+							</td>
+						</tr>
+					</table>
+				  </td>
+                 
+				  <!-- product cell new -->
+				  
+				 				<!-- product cell new -->
+				  <td width="300">
+				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
+						<tr>
+							<td>
+								<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0">
+									<tr>
+										<td style="text-align:center"><img src="./email-img/product.png" style="border-color:#000000;border-width:0;-ms-interpolation-mode:bicubic;text-decoration:none;outline:none;"
+                         border="0" alt="product-image" width="107" height="111" /></td>	
+									</tr>
+								</table>
+							</td>
+
+							<td valign="middle">
+								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Product Name: </span>Name</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Product Code: </span>Code</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
+									  <span style="text-align:left;font-weight:bold;">Price: </span>&#163;9.99</td>
+									</tr>
+		
+									<tr>
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Was: </span><span style=
 									  "text-decoration:line-through;">&#163;19.99</span></td>
 									</tr>
@@ -287,15 +402,17 @@
 				  <!-- product cell new -->
 				  
 
+				  
                 </tr>
               </table>
             </td>
           </tr>
 		  <!-- row end -->
-		  		  		  
-          <!-- row start  -->
 		  
-		   	<tr style="width:600px;background-color:#f6f6f6;" bgcolor=
+		   <!-- row start eg.(if i%2 == 0) -->
+		  
+		  		  
+		   <tr style="width:600px;background-color:#f6f6f6;" bgcolor=
           "#F6F6F6">
             <td style="font-family:Arial, Helvetica, sans-serif;" width="600">
               <table border="0" style="font-size:12px;width:600px;" cellpadding="5"
@@ -303,7 +420,7 @@
                 <tr style="background-color:#f6f6f6;" bgcolor="#F6F6F6">
 				
 				<!-- product cell new -->
-				  <td>
+				  <td width="300">
 				  	<table border="0" style="font-size:12px;" cellpadding="5" cellspacing="0" >
 						<tr>
 							<td>
@@ -318,22 +435,22 @@
 							<td valign="middle">
 								<table border="0" style="font-size:12px;" cellpadding="0" cellspacing="0" align="left">
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Name: </span>Name</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Product Code: </span>Code</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Price: </span>&#163;9.99</td>
 									</tr>
 		
 									<tr>
-									  <td align="left" width="400" style="font-family:Arial, Helvetica, sans-serif; width:400px">
+									  <td align="left" width="150" style="font-family:Arial, Helvetica, sans-serif; width:150px">
 									  <span style="text-align:left;font-weight:bold;">Was: </span><span style=
 									  "text-decoration:line-through;">&#163;19.99</span></td>
 									</tr>
@@ -355,16 +472,23 @@
                  
 				  <!-- product cell new -->
 				  
-
+				 
                 </tr>
               </table>
             </td>
           </tr>
 		  <!-- row end -->
 
-          <tr style="background-color:#f6f6f6;"
-          bgcolor="#F6F6F6">
-            <td width="600" height="50" style="font-family:Arial, Helvetica, sans-serif;width:600px;height:50px"></td>
+          <tr style="width:600px;background-color:#f6f6f6;" bgcolor="#F6F6F6">
+            <td style="font-family:Arial, Helvetica, sans-serif;text-align:center;"
+            align="center" height="50" valign="bottom"><a href="#" style=
+            "font-size:14px;color:#000000;text-align:center;font-weight:bold;">Reload the
+            Basket</a><br />&nbsp;</td>
+          </tr>
+
+          <tr  style="width:600px;background-color:#f6f6f6;" bgcolor=
+          "#F6F6F6">
+            <td style="font-family:Arial, Helvetica, sans-serif;"></td>
           </tr>
 
           <tr style="background-color:#000000;width:600px;" bgcolor="#000000" align=
