couple of fixes

--- a/templates/xhtml-templates/CR-Call-centre.html
+++ b/templates/xhtml-templates/CR-Call-centre.html
@@ -467,7 +467,7 @@
 				</div>
 			</div>
 			<!-- end of #account-update --> 
-			
+		</div>
 			<!-- end of grey bg wrapper-->
 			
 		<!-- #content --> 
@@ -523,6 +523,7 @@
 		<h2>Follow Us: </h2>
 		<a target="blank" href="https://twitter.com/ScienceinSport" class="social-icon twitter"></a> <a target="blank" href="https://www.facebook.com/ScienceInSportOfficial" class="social-icon facebook"></a> <a target="blank" href="http://www.youtube.com/user/scienceinsport/" class="social-icon youtube"></a> </div>
 </div>
+
 <!-- #footer --> 
 
 </body>
