--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -38,12 +38,13 @@ button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}
 #mega-dropdown a,#account-menu a{text-decoration:none}
 .top-level{font-size:.7em;text-decoration:none;padding:5px;text-transform:uppercase}
 .li-0 a,.top-level,#account-menu a{color:#fff}
-.li-1 a{color:#a4a4a4}
-.li-2 a,.li-2 span{color:#656565;font-size:.7em}
-.menu-more a,#account-menu a{font-size:.7em}
+.li-1 a{color:#bbbbbb}
+.li-2 a,.li-2 span{color:#888888;font-size:10px}
+.menu-more a{font-size:10px; line-height: 16px}
+#account-menu a{font-size:.7em}
 .li-0 a:hover,.li-1 a:hover,.top-level:hover,#account-menu a:hover{color:#ffe100}
 .li-1{width:205px;float:left;padding:0 10px 30px}
-.li-2{list-style-type:disc;color:#656565}
+.li-2{list-style-type:disc;color:#656565;font-size: 1.0em;}
 #account-menu{position:absolute;top:15px;right:15px;width:350px;text-transform:uppercase;height:34px}
 .acc-menu-item{float:right}
 .acc-menu-item img,.acc-menu-item a{height:34px;vertical-align:middle;display:table-cell}
@@ -799,7 +800,7 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 
 .radio-row p{
 	white-space: pre;
-	display:block;ss
+	display:block;
 	margin-top: -20px;
 }
 .radio-row input{
