updated base files

--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -42,4 +42,4 @@
 }
 
 
-input[type="radio"], #my-account-register-form input[type="radio"], #update-details input[type="radio"] {background: none!important};
+input[type="radio"], #my-account-register-form input[type="radio"], #update-details input[type="radio"] {background: none!important}
