--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -28,15 +28,60 @@
 					<!-- spans below are copies of those found in .li-0 --> 
 					<span class="cat-title"><a  class="top-level" href="#" title="About">About</a></span> <span class="cat-title"><a class="top-level" href="#" title="Training &amp; Advice">Training &amp; Advice</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Sponsorship &amp; Partners">Sponsorship &amp; Partners</a></span> <span class="cat-title"><a  class="top-level" href="#" title="News &amp; Events">News &amp; Events</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Videos">Videos</a></span> <span class="cat-title"><a  class="top-level" href="#" title="Shop">Shop</a></span> </div>
 			</div>
+			
+			<!-- edited markup for menu -->
 			<div id="account-menu">
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span>[2 Items]</span></a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#"><span class="pound">&pound;3619.92</span></a></div>
 				<div class="acc-menu-item"><a class="basket-over" href="#" style="color:#656565">Cart</a></div>
-				<div class="acc-menu-item"><a class="basket-over" href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items' height="34" width="36" /></a></div>
-				<div class="acc-menu-item"><a href="#"><span>Login/Register</span></a></div>
-				<div class="acc-menu-item"><a href="#"><span>Help</span></a></div>
-				<div class="acc-menu-item"><a href="#"><span>Home</span></a></div>
+				<div class="acc-menu-item"><a class="basket-over" href="#"><img src="../img/ui/trolley.png" alt='Cart' title='2 items'  /></a></div>
+				<div class="clear"></div>
+				<div class="mnu-acc-row-two">
+					<div class="acc-menu-item"><a href="/login/register?redirectto=%2f"><span>Register</span></a></div>
+					<div class="acc-menu-item"><a href="/login?redirectto=%2f"><span>Sign In</span></a></div>
+						<div class="acc-menu-item no-js">
+						<form id="no-js-uk-currency-sel" action="#" method="post">
+						<select name="countries-opt">
+							<optgroup label="Countries">
+								<option value="UK" selected="selected">United Kingdom</option>
+								<option value="NZ">New Zealand</option>
+								<option value="AU">Australia</option>
+								<option value="BD">Bangladesh</option>
+								<option value="MY">Borneo</option>
+								<option value="CN">China</option>
+								<option value="CK">Cook Islands</option>
+								<option value="FJ">Fiji</option>
+								<option value="HK">Hong Kong</option>
+								<option value="IN">India</option>
+								<option value="ID">Indonesia</option>
+								<option value="JP">Japan</option>
+								<option value="BD">Korea</option>
+								<option value="MY">Malaysia</option>
+								<option value="KP">North Korea</option>
+								<option value="PK">Pakistan</option>
+								<option value="PG">Papua New Guinea</option>
+								<option value="PH">Philippines</option>
+								<option value="RU">Russia</option>
+								<option value="WS">Samoa</option>
+								<option value="SG">Singapore</option>
+								<option value="TH">Thailand</option>
+								<option value="TO">Tonga</option>
+							</optgroup>
+							<optgroup label="Continents">
+								<option value="AF">Africa</option>
+								<option value="EU">Europe</option>
+								<option value="NA">North America</option>
+								<option value="SA">South America</option>
+							</optgroup>
+						</select>
+						<button type="submit">Submit</button>
+					</form>
+					</div>
+				</div>
+				<div class="clear"></div>
 			</div>
+			<!-- end of edit -->
+			
 			<div id="mega-dropdown"> 
 				<!-- example menu -->
 				<ul class="ul-0">
