--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -39,7 +39,7 @@
 				<div class="mnu-acc-row-two">
 					<div class="acc-menu-item"><a href="/login/register?redirectto=%2f"><span>Register</span></a></div>
 					<div class="acc-menu-item"><a href="/login?redirectto=%2f"><span>Sign In</span></a></div>
-						<div class="acc-menu-item no-js">
+						<div class="acc-menu-item no-js countries-form">
 						<form id="no-js-uk-currency-sel" action="#" method="post">
 						<select name="countries-opt">
 							<optgroup label="Countries">
