--- a/templates/xhtml-templates/10.1.1-home-flags-UK.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-UK.html
@@ -82,29 +82,80 @@
 			</div>
 			<div id="js-countries">
 				<div id="js-countries-inner">
-					<table class="flags">
-					<tr>
-						<td id="flag-label-4"><div id="js-countries-inner2">
-							<table class="flags">
-								<tr>
-									<td><img id="0-flag-image" src="../img/flags/UK.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="0-flag-label">United Kingdom</span></td>
-									<td><img id="1-flag-image" src="../img/flags/IN.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="1-flag-label">India</span></td>
-									<td><img id="2-flag-image" src="../img/flags/RU.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="2-flag-label">Russia</span></td>
-								</tr>
-								<tr>
-									<td><img id="3-flag-image" src="../img/flags/NZ.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="3-flag-label">New Zealand</span></td>
-									<td><img id="4-flag-image" src="../img/flags/ID.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="4-flag-label">Indonesia</span></td>
-									<td><img id="5-flag-image" src="../img/flags/WS.png" width="24" height="12" alt="UK" /></td>
-									<td><span id="5-flag-label">Samoa</span></td>
-								</tr>
-							</table>
-						</div></td>
-					</tr>
+					<table class="flags" cellspacing="5" border="0">
+						<tr>
+							<td><img id="flag-image-0" src="../img/flags/UK.png" alt="UK" /></td>
+							<td><span id="flag-label-0">United Kingdom</span></td>
+							<td><img id="flag-image-1" src="../img/flags/IN.png" alt="IN" /></td>
+							<td><span id="flag-label-1">India</span></td>
+							<td><img id="flag-image-2" src="../img/flags/RU.png" alt="RU" /></td>
+							<td><span id="flag-label-2">Russia</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-3" src="../img/flags/NZ.png" alt="NZ" /></td>
+							<td><span id="flag-label-3">New Zealand</span></td>
+							<td><img id="flag-image-4" src="../img/flags/ID.png" alt="ID" /></td>
+							<td><span id="flag-label-4">Indonesia</span></td>
+							<td><img id="flag-image-5" src="../img/flags/WS.png" alt="WS" /></td>
+							<td><span id="flag-label-5">Samoa</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-6" src="../img/flags/AU.png" alt="AU" /></td>
+							<td><span id="flag-label-6">Australia</span></td>
+							<td><img id="flag-image-7" src="../img/flags/JP.png" alt="JP" /></td>
+							<td><span id="flag-label-7">Japan</span></td>
+							<td><img id="flag-image-8" src="../img/flags/SG.png" alt="SG" /></td>
+							<td><span id="flag-label-8">Singapore</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-9" src="../img/flags/BD.png" alt="BD" /></td>
+							<td><span id="flag-label-9">Bangladesh</span></td>
+							<td><img id="flag-image-10" src="../img/flags/KP.png" alt="KP" /></td>
+							<td><span id="flag-label-10">Korea</span></td>
+							<td><img id="flag-image-11" src="../img/flags/TH.png" alt="TH" /></td>
+							<td><span id="flag-label-11">Thailand</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-12" src="../img/flags/MY.png" alt="MY" /></td>
+							<td><span id="flag-label-12">Borneo</span></td>
+							<td><img id="flag-image-13" src="../img/flags/MY.png" alt="MY" /></td>
+							<td><span id="flag-label-13">Malaysia</span></td>
+							<td><img id="flag-image-14" src="../img/flags/TO.png" alt="TO" /></td>
+							<td><span id="flag-label-14">Tonga</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-15" src="../img/flags/CN.png" alt="CN" /></td>
+							<td><span id="flag-label-15">China</span></td>
+							<td><img id="flag-image-16" src="../img/flags/KP.png" alt="KP" /></td>
+							<td><span id="flag-label-16">North Korea</span></td>
+							<td><img id="flag-image-17" src="../img/flags/AF.png" alt="AF" /></td>
+							<td><span id="flag-label-17">Africa</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-18" src="../img/flags/CK.png" alt="CK" /></td>
+							<td><span id="flag-label-18">Cook Islands</span></td>
+							<td><img id="flag-image-19" src="../img/flags/PK.png" alt="PK" /></td>
+							<td><span id="flag-label-19">Pakistan</span></td>
+							<td><img id="flag-image-20" src="../img/flags/EU.png" alt="EU" /></td>
+							<td><span id="flag-label-20">Europe</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-21" src="../img/flags/FJ.png" alt="FJ" /></td>
+							<td><span id="flag-label-21">Fiji</span></td>
+							<td><img id="flag-image-22" src="../img/flags/PG.png" alt="PG" /></td>
+							<td><span id="flag-label-22">Papua New Guinea</span></td>
+							<td><img id="flag-image-23" src="../img/flags/NA.png" alt="NA" /></td>
+							<td><span id="flag-label-23">North America</span></td>
+						</tr>
+						<tr>
+							<td><img id="flag-image-21" src="../img/flags/HK.png" alt="HK" /></td>
+							<td><span id="flag-label-21">Hong Kong</span></td>
+							<td><img id="flag-image-22" src="../img/flags/PH.png" alt="PH" /></td>
+							<td><span id="flag-label-22">Philippines</span></td>
+							<td><img id="flag-image-23" src="../img/flags/SA.png" alt="SA" /></td>
+							<td><span id="flag-label-23">South America</span></td>
+						</tr>
+	
 					</table>
 				</div>
 			</div>
