ajusted css height on container for ie7

--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -43,3 +43,6 @@
 
 
 input[type="radio"], #my-account-register-form input[type="radio"], #update-details input[type="radio"] {background: none!important}
+#js-countries{
+	height:auto!important;
+}
