--- a/templates/xhtml-templates/10.1.1-home-flags-APAC.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-APAC.html
@@ -94,6 +94,11 @@
 				<div id="country-flag"><img id="dyn-flag" src="../img/flags/UK.png" alt="UK" /></div>
 				<div id="country-changer"><img src="../img/flags/button.png" width="11" height="11" alt="Change" title="Change" /></div>
 			</div>
+			<div class="clear"></div>
+			<div id="currency-selector" style="display:block">
+				<div id="currency-code">$USD</div>
+				<div id="country-changer"><img src="../img/flags/button-gray.png" width="11" height="11" alt="Change" title="Change" /></div>
+			</div>
 			<!-- show and hide the correct components depending on JavaScript availability -->
 			<script>
 				document.getElementById('no-js-mnu').style.display = "none";
