--- a/templates/xhtml-templates/10.1.1-home-flags-APAC.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-APAC.html
@@ -183,6 +183,24 @@
 					</table>
 				</div>
 			</div>
+			<div id="js-currencies">
+				<div id="js-currencies-inner">
+					<table class="currencies" cellspacing="5" border="0">
+						<tr>
+							<th><span id="currency-change">Change your currency</span></th>
+						</tr>
+						<tr>
+							<td><span id="currency-usd">$USD - United States Dollar</span></td>
+						</tr>
+						<tr>
+							<td><span id="currency-aus">$AUS - Australian Dollar</span></td>
+						</tr>
+						<tr>
+							<td><span id="currency-nzd">$NZD - New Zealand Dollar</span></td>
+						</tr>
+					</table>
+				</div>
+			</div>
 			<!-- end of edit -->
 			
 			<div id="mega-dropdown"> 
