currency list submits currency too

--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -1235,8 +1235,12 @@ img[id*="flag-image"]{
 }
 span[id*="flag-label"], span[id*="currency"]{
 	vertical-align:middle;
-	font-size:11px;
+	font-size:10px;
 	cursor:pointer;
+}
+.currencies th{
+	vertical-align:middle;
+	font-size:11px;
 }
 .flags td{
 	vertical-align:middle;
@@ -1304,7 +1308,4 @@ span[id*="flag-label"], span[id*="currency"]{
 	text-align:left;
 	vertical-align:middle;
 	padding-bottom:6px;
-}
-.currencies span{
-	cursor:pointer;
 }
