--- a/templates/xhtml-templates/10.1.1-home-flags-APAC.html
+++ b/templates/xhtml-templates/10.1.1-home-flags-APAC.html
@@ -78,9 +78,9 @@
 						</select>
 						<select id="currency-opt" name="currency-opt">
 							<optgroup label="Change your currency">
-								<option value="USD" selected="selected">$USD  - United States Dollars</option>
-								<option value="AUS">$AUS  - Australian Dollars</option>
-								<option value="NZD">$NZD  - New Zealand Dollars</option>
+								<option value="USD" selected="selected">$USD - United States Dollars</option>
+								<option value="AUS">$AUS - Australian Dollars</option>
+								<option value="NZD">$NZD - New Zealand Dollars</option>
 							</optgroup>
 						</select>
 						<button type="submit">Submit</button>
@@ -187,7 +187,7 @@
 				<div id="js-currencies-inner">
 					<table class="currencies" cellspacing="5" border="0">
 						<tr>
-							<th><span id="currency-change">Change your currency</span></th>
+							<th><span>Change your currency</span></th>
 						</tr>
 						<tr>
 							<td><span id="currency-usd">$USD - United States Dollar</span></td>
